# software_cobot

./: .gitignore  .gitmodules  AGENTS.md  CameraSimpleTest.py  Dockerfile  LICENSE  README.md  docker_help.txt  docker_launch.sh  entrypoint.sh  goal.txt  rw_permissions.sh  x86_Dockerfile
SpaceCobot-ros_px4/ardupilot/: CMakeLists.txt  Makefile  README.md  wscript
SpaceCobot-ros_px4/ardupilot/SpaceCobot/: AC_AttitudeControl_SCobot.cpp  AC_AttitudeControl_SCobot.h  GCS_Mavlink.cpp  PC_PositionControl_SCobot.h  Parameters.cpp  Parameters.h  SCobot_Actuation.cpp  SCobot_Actuation.h  SCobot_CSVDebug.cpp  SCobot_PipeMsgs.h  SpaceCobot.cpp  defines.h  radio.cpp  system.cpp  wscript
SpaceCobot-ros_px4/ardupilot/libraries/AC_AttitudeControl/: AC_AttitudeControl_SCobot.h
SpaceCobot-ros_px4/ardupilot/libraries/SPACE_COBOT_EXAMPLES/examples/AP_AHRS_SCobot_AHRS/: SCobot_AHRS.cpp
SpaceCobot-ros_px4/ardupilot/libraries/SPACE_COBOT_EXAMPLES/examples/AP_AHRS_SCobot_AttitudeControl/: AMatrix.cpp  SCobot_AttitudeControl.cpp
SpaceCobot-ros_px4/ardupilot/libraries/SPACE_COBOT_EXAMPLES/examples/AP_AHRS_SCobot_SysIdent/: AMatrix.h  SCobot_SysIdent.cpp
SpaceCobot-ros_px4/ardupilot/libraries/SPACE_COBOT_EXAMPLES/examples/AP_AHRS_SCobot_SysIdent_TimeResp/: SCobot_Actuation.cpp  SCobot_SysIdent_TimeResp.cpp
SpaceCobot-ros_px4/ardupilot/libraries/SPACE_COBOT_EXAMPLES/examples/AP_HAL_MotorPWM/: MotorPWM.cpp
SpaceCobot-ros_px4/ardupilot/libraries/SPACE_COBOT_EXAMPLES/examples/AP_HAL_MotorStop/: MotorStop.cpp
SpaceCobot-ros_px4/ardupilot/libraries/SPACE_COBOT_EXAMPLES/examples/AP_HAL_RCOut_SCobot_AMatrix/: AMatrix.h
SpaceCobot-ros_px4/ardupilot/libraries/SPACE_COBOT_EXAMPLES/examples/AP_HAL_RCOutput2Cobot/: RCOutput2Cobot.cpp
SpaceCobot-ros_px4/ardupilot/libraries/SPACE_COBOT_EXAMPLES/examples/AP_HAL_SCobot_Attitude/: AMatrix.cpp  AMatrix.h
SpaceCobot-ros_px4/catkin_packages/SCobot_ActuationPub/: CMakeLists.txt
SpaceCobot-ros_px4/catkin_packages/SCobot_PositionSub/: CMakeLists.txt  package.xml
SpaceCobot-ros_px4/catkin_packages/SCobot_PositionSub/src/: positionSubcriber.cpp
Space_CoBot/SpaceCobot-ros_px4/catkin_packages/SCobot_AttitudePub/: CMakeLists.txt
catkin_packages-snapshot-20211104/catkin_packages/SCobot_MotionSub/: CMakeLists.txt  package.xml
catkin_packages-snapshot-20211104/catkin_packages/SCobot_MotionSub/src/: SCobotPipeCommunication.cpp  motion.cpp
catkin_packages-snapshot-20211104/catkin_packages/SCobot_VelocitySub/: CMakeLists.txt  package.xml
catkin_packages-snapshot-20211104/catkin_packages/scobot_msgs/: package.xml
docker/: .zshrc  (+3 more)
ros2_ws/src/camera/camera_publish_pkg_/: CMakeLists.txt  package.xml
ros2_ws/src/camera/camera_publish_pkg_/src/: camera_publish.cpp
ros2_ws/src/controller/: CMakeLists.txt  package.xml
ros2_ws/src/controller/include/attitude_controller/: Actuation.hpp  attitude_controller_handle.hpp  euler_angles_input.hpp
ros2_ws/src/controller/include/controller_master/: AMatrix.hpp  controller_master_handle.hpp
ros2_ws/src/controller/launch/: controller_launch.py
ros2_ws/src/controller/src/attitude_controller/: attitude_controller_handle.cpp  attitude_controller_main.cpp  euler_angles_input.cpp
ros2_ws/src/controller/src/controller_master/: AMatrix.cpp  Actuation.cpp  controller_master_handle.cpp  controller_master_main.cpp
ros2_ws/src/delay_generator/: CMakeLists.txt  package.xml
ros2_ws/src/delay_generator/configuration/: topics.json  topics.yaml
ros2_ws/src/delay_generator/include/delay_generator/: delay_generator.hpp  delayd_topic_info.hpp  delayed_message.hpp
ros2_ws/src/delay_generator/src/: delay_generator.cpp
ros2_ws/src/jetson_cameras/: CMakeLists.txt  package.xml
ros2_ws/src/jetson_cameras/config/: camera0_params.yaml  camera0_parms.yaml  camera1_params.yaml  camera1_parms.yaml  camera2_params.yaml  camera3_params.yaml  camera_params.yaml
ros2_ws/src/jetson_cameras/launch/: aruco0_launch.py  aruco1_launch.py  aruco2_launch.py  aruco3_launch.py  camera0_calibrate_launch.py  camera0_launch.py  camera1_launch.py  camera2_launch.py  camera3_launch.py  camera_calibrate_launch.py  main_launch.py
ros2_ws/src/jetson_cameras/src/: camera_publisher.cpp
ros2_ws/src/mav_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/mav_msgs/include/mav_msgs/: common.h  conversions.h  default_values.h  eigen_mav_msgs.h
ros2_ws/src/mocap_interface/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/mocap_interface/launch/: mcs_interface.launch
ros2_ws/src/mocap_interface/msg/: MocapMsg.msg
ros2_ws/src/mocap_interface/src/nodes/: mocap_interface.cpp  mocap_interface.h
ros2_ws/src/predictive_controller/attitude_controller_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/predictive_controller/attitude_controller_cpp/src/: ControllerMain.cpp  controller.cpp
ros2_ws/src/predictive_controller/attitude_controller_cpp/system_parameters/: J.npy  c.npy  g.npy
ros2_ws/src/space_cobot_controller/: CMakeLists.txt  package.xml
ros2_ws/src/space_cobot_controller/launch/: space_cobot_launch.py
ros2_ws/src/space_cobot_controller/msg/: PwmValues.msg
ros2_ws/src/space_cobot_controller/src/: AMatrix.cpp  AMatrix.h  AttitideControl.h  PositionControl.h  space_cobot_controller.cpp  space_cobot_controller.hpp
ros2_ws/src/space_cobot_interface/: CMakeLists.txt  package.xml
ros2_ws/src/space_cobot_interface/include/space_cobot_interface/: interface_controller.hpp  space_cobot_handle.hpp
ros2_ws/src/space_cobot_interface/launch/: interface.launch.py
ros2_ws/src/space_cobot_interface/msg/: PwmValues.msg
ros2_ws/src/space_cobot_interface/src/: Actuation.cpp  interface_controller_main.cpp  interface_main.cpp  space_cobot_interface.cpp  space_cobot_interface.hpp  space_cobot_interface_backup.cpp
ros2_ws/src/teleop/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/teleop/config/: local_planner.yaml  teleop_bridge.yaml
ros2_ws/src/teleop/launch/: local_planner.launch.py  teleop.launch.py
ros2_ws/src/teleop/src/: local_planner_node.cpp  teleop_bridge_node.cpp
ros2_ws/src/teleop/teleop/: teleop_node.py  tf_broadcaster.py
(+347 files in other folders)
